<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App name -->
    <string name="app_name">Kodi Remote Bridge</string>
    
    <!-- Connection -->
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="select_connection">Select Connection</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="test_connection">Test Connection</string>
    <string name="connection_name">Connection Name</string>
    <string name="host_address">Host Address</string>
    <string name="port">Port</string>
    <string name="username_optional">Username (Optional)</string>
    <string name="password_optional">Password (Optional)</string>
    
    <!-- Media -->
    <string name="no_media_playing">No media playing</string>
    
    <!-- Playback controls -->
    <string name="play_pause">Play/Pause</string>
    <string name="stop">Stop</string>
    <string name="rewind">Rewind</string>
    <string name="forward">Forward</string>
    <string name="mute">Mute</string>
    
    <!-- Navigation -->
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="info">Info</string>
    <string name="menu">Menu</string>
    
    <!-- Library -->
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    
    <!-- System -->
    <string name="power">Power</string>
    
    <!-- Errors -->
    <string name="connection_failed">Connection failed</string>
    <string name="connection_successful">Connection successful!</string>
    <string name="error_occurred">An error occurred</string>
</resources>
